--- a/css/global.css
+++ b/css/global.css
@@ -142,6 +142,12 @@ a {
           box-sizing: border-box;
 }
 
+.s-2 .container, .s-1 .container {
+  max-width: 1170px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .s-1 {
   background-color: lightblue;
 }
@@ -158,17 +164,14 @@ a {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  max-width: 1170px;
-  width: 100%;
-  margin: 0 auto;
-  border: 1px solid red;
-  height: 500px;
+  border: 2px solid red;
+  height: 400px;
 }
 .s-1 .container .box {
   width: 100px;
   height: 100px;
   background-color: rgb(192, 255, 34);
-  border: 1px solid black;
+  border: 2px solid black;
 }
 .s-1 .container .box:first-child {
   background-color: black;
@@ -178,6 +181,41 @@ a {
 }
 .s-1 .container .box:last-child {
   background-color: red;
+}
+@media (max-width: 1200px) {
+  .s-1 .container .box {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media (max-width: 800px) {
+  .s-1 .container .box {
+    width: 70px;
+    height: 70px;
+  }
+}
+@media (max-width: 1200px) {
+  .s-1 .container {
+    width: 80%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media (max-width: 800px) {
+  .s-1 .container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .s-2 {
@@ -197,13 +235,10 @@ a {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  max-width: 1170px;
-  width: 100%;
-  margin: 0 auto;
   height: 400px;
   border: 2px solid black;
 }
-.s-2 .container .ball {
+.s-2 .container > .ball {
   width: 100px;
   height: 100px;
   background-color: blue;
