--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -2,17 +2,14 @@
     background-color: lightblue;
     .container {
         @include goflex(row, space-around, flex-start);
-        max-width: 1170px;
-        width: 100%;
-        margin: 0 auto;
-        border: 1px solid red;
-        height: 500px;
-
+        @extend %mycontainer;
+        border: 2px solid red;
+        height: 400px;
         .box {
             width: 100px;
             height: 100px;
             background-color: $mycolor1;
-            border: 1px solid black;
+            border: 2px solid black;
             &:first-child {
                 background-color: black;
             }
@@ -22,6 +19,23 @@
             &:last-child {
                 background-color: red;
             }
+            @media (max-width: $tabletsize) {
+                width: 150px;
+                height: 150px;
+            }
+            @media (max-width: $phonesize) {
+                width: 70px;
+                height: 70px;
+            }
+        }
+        @media (max-width: $tabletsize) {
+            width: 80%;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+        }
+        @media (max-width: $phonesize) {
+            flex-direction: row;
         }
     }
 }
@@ -29,13 +43,11 @@
     background-color: lightcoral;
     .container {
         @include goflex(row, space-between, flex-end);
-        max-width: 1170px;
-        width: 100%;
-        margin: 0 auto;
+        @extend %mycontainer;
         height: 400px;
         border: 2px solid black;
 
-        .ball {
+        & > .ball {
             width: 100px;
             height: 100px;
             background-color: blue;
